# init-headphone

./: .gitignore  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac  init-headphone  init-headphone.service.in
etc/: README.md
etc/linux-grub/: README.md  init-headphone.cfg
etc/linux-pm-utils/: README.md  init-headphone
etc/linux-systemd/: README.md  init-headphone.service
etc/linux-upstart/: README.md  init-headphone.conf
src/: init-headphone  init-headphone.in
